# MGLEngine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MGLEngine.sln  README.md  addAllSources.ps1  error
CMake/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
CMake/MGLEngine.App/: CMakeLists.txt
CMake/MGLEngine.Core/: CMakeLists.txt  VulkanApp.cpp  VulkanApp.ixx  main.cpp
CMake/MGLEngine.Core/Window/: IWindowEventHandler.h
CMake/MGLEngine.MCAD/: CMakeLists.txt  ShapesController.cpp  ShapesController.h  main.cpp
CMake/MGLEngine.Shared/: CMakeLists.txt  IMGLContainer.h  IMGLEngine.h  MGLContainer.h
CMake/MGLEngine.Shared/DrawTree/: DrawInfo.h  DrawTree.h  IRenderResource.h
CMake/MGLEngine.Shared/Interfaces/: IAppBuilder.h  IAppConfiguration.h  IDrawContext.h  IDrawingObject.h  IMGLEngine.h  IPainter2D.h  IRenderDataContext.h  ISerializable.h  IShaderConfiguration.h  IShape3D.h  ITopology2D.h  ITopology3D.cpp  ITopology3D.h  IVulkanApp.h  IWindowOptions.h
CMake/MGLEngine.Shared/Mesh/: OrthoRect2D.h  Triangle2D.cpp  Triangle2D.h
CMake/MGLEngine.Shared/Painters/: CyclicColor.h  VerticeColor2D.cpp  VerticeColor2D.h
CMake/MGLEngine.Shared/Renders/: VertexColor2D.h
CMake/MGLEngine.Shared/Shaders/: BindingManager.cpp  BindingManager.h  FieldType.h  IPipelineOptions.h  IShader.h  IShaderConfiguration.h
CMake/MGLEngine.Shared/Shaders/Color2D/: ShaderColor2D.h  VertexColor2D.h  color2D.vert  color2D_frag.h  color2D_vert.h
CMake/MGLEngine.Shared/ShapesService/: ShapesService.cpp  ShapesService.h
CMake/MGLEngine.Shared/Utils/: CommitTag.h  Exception.cpp  NTree.h  Observable.h  eassert.cpp  opointer.h  pointers.h
CMake/MGLEngine.Shared/Utils/Arrays/: ArraySelect.h  FlagBitVector.h  IArray.h  Indices.cpp  IndicesMemoryStream.cpp  IndicesMemoryStream.h  InterleavedMemoryStream.cpp  InterleavedMemoryStream.h
CMake/MGLEngine.Shared/Utils/DefragArray/: CopyRegion.h  DefragArray.h
CMake/MGLEngine.Shared/VerticeData/: Color2D.h
CMake/MGLEngine.Shared/Window/: IWindowEventHandler.cpp  IWindowEventHandler.h
CMake/MGLEngine.Tests/: ArrayTest.cpp  CMakeLists.txt  HttpServerTest.cpp  TestDefragArray.cpp
CMake/MGLEngine.Tests/Vulkan/: SemaphorePoolTest.cpp  VulkanContextTests.cpp  VulkanTestsHelper.cpp  VulkanTestsHelper.h
CMake/MGLEngine.Vulkan/: CMakeLists.txt  MGLContainer.cpp  MGLContainerVulkan.cpp  MGLEngineVulkan.cpp  MGLEngineVulkan.h  PipelineOptions.h  ShaderContext.h  VulkanApp.cpp  VulkanApp.h  VulkanAppBuilder.cpp  VulkanAppBuilder.h  VulkanEngine.cpp  VulkanEngine.h  VulkanMemoryProperties.h  VulkanUtils.cpp  VulkanUtils.h
CMake/MGLEngine.Vulkan/DrawTree/: IVulkanResourceLoader.h  TreeExecutionContext.h  VulkanDrawTreeParser.h  VulkanInternalData.h  VulkanResourceLoader.cpp  VulkanResourceLoader.h
CMake/MGLEngine.Vulkan/MemoryManager/: VulkanBuffer.h  VulkanMappedAutoSyncBuffer.h  VulkanMappedBuffer.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h
CMake/MGLEngine.Vulkan/RenderPipeline/: Compiler.h  FragmentShaderByteCode.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDrawTreeParser.h  VulkanFence.cpp  VulkanFramebuffer.h  VulkanInputLayout.cpp  VulkanInputLayout.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanSemaphorePool.cpp  VulkanSemaphorePool.h  VulkanSubPass.cpp  VulkanSubPass.h  VulkanSwapChainFramebuffers.cpp
CMake/MGLEngine.Vulkan/RenderResources/: IVulkanRenderSlot.h  IVulkanSlotBinding.h  SlotManager.cpp  SlotManager.h  UniformBufferSlot.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h
CMake/MGLEngine.Vulkan/SPIR-V/: canvas2D_frag.h  canvas2D_vert.h  shaders_bytecode.h  vert.spv
CMake/MGLEngine.Vulkan/SPIR-V/headers/: canvas2D_frag.h
CMake/MGLEngine.Vulkan/Shaders/: IVulkanRenderContext.cpp  IVulkanRenderContext.h  ShaderColor2D.cpp  ShaderColor2D.h
CMake/MGLEngine.Vulkan/VulkanApp/: ByteCodeCollection.cpp  ShaderConfiguration.h  ShaderContext.cpp  ShaderContext.h  SwapChainData.h  VulkanApp.cpp  VulkanApp.h  VulkanConfiguration.h
CMake/MGLEngine.Vulkan/VulkanContext/: IDrawContext.h  RenderSerizalizationContext.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBatchCollection.cpp  VulkanConfiguration.h  VulkanDrawContext.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLayerProperties.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanMemoryProperties.cpp  VulkanMemoryProperties.h  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSwapChainOptions.h  vmausage.h
CMake/MGLEngine.Vulkan/Window/: MWindow.cpp  MWindow.h  VulkanCanvas.cpp  VulkanCanvas.h
CMake/MGLEngine_Vulkan/SPIR-V/headers/: canvas2D_frag.h
CMake/MglEngine.HttpServer/: CMakeLists.txt  HttpContext.h  HttpMessages.cpp  HttpMessages.h  HttpResponse.cpp  HttpResponse.h  HttpResponses.cpp  HttpResponses.h  HttpServer.cpp  HttpServer.h  IController.h  IMiddleware.h  Router.cpp  Router.h  Url.h  WebApiContext.cpp  WebApiContext.h  WebApiMiddletier.cpp  WebApiMiddletier.h  boost_deps.h  main.cpp
MGLEngine.CLR/: AssemblyInfo.cpp  Canvas.cpp  Canvas.h  IMngTopology3D.cpp  MGLEngine.CLR.cpp  MGLEngine.CLR.h  MGLEngine.CLR.vcxproj  MGLEngine.CLR.vcxproj.filters  ReadMe.txt  ShapeHandle.cpp  ShapeHandle.h  ShapeManager.cpp  ShapeManager.h  ShapesManager.cpp  ShapesManager.h  Stdafx.cpp  UnmanagedFacade.cpp  UnmanagedFacade.h  Window.cpp  Window.h
MGLEngine.Core/: CMakeLists.txt  main.cpp
MGLEngine.MCAD/: CMakeLists.txt  ShapesController.h
MGLEngine.Managed/: Class1.cs  MGLEngine.Managed.cpp  MGLEngine.Managed.csproj  MGLEngine.Managed.vcxproj  MGLEngine.Managed.vcxproj.filters  packages.config
MGLEngine.Server/: App.config  MGLEngine.Server.csproj  Program.cs  packages.config
MGLEngine.Shared/: CMakeLists.txt  CopyPlanSequenceDetail.cpp  common.h  (+12 more)
(+662 files in other folders)
